--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       <div class="col-xs-12 col-sm-8 col-sm-push-2">
         <h1 class="text-center">知识产权保护
           <a class="btn btn-default" href="/add.html"> 添加项目 </a>
+          <a class="btn btn-default" href="/history.html"> 历史记录 </a>
         </h1>
         <hr/>
 
