--- a/src/history.html
+++ b/src/history.html
@@ -292,7 +292,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">我的项目</a>
+                                <a href="/">我的项目</a>
                             </li>
                         </ul>
                     </li>
