--- a/src/edit.html
+++ b/src/edit.html
@@ -64,7 +64,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">我的项目</a>
+                                <a href="/">我的项目</a>
                             </li>
                         </ul>
                     </li>
