--- a/src/index.html
+++ b/src/index.html
@@ -20,60 +20,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-          aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">知识产权保护</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="/">首页
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="/history.html">历史项目</a>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="/add.html">添加项目</a>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" style="padding-bottom: 5px; padding-top: 5px" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">
-              <img src="/images/userimage.png" style="width: 36px" alt="张三" class="img-circle">
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="/">我的项目</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
+<nav></nav>
   <div class="container">
 
 
