--- a/src/edit.html
+++ b/src/edit.html
@@ -14,93 +14,95 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1"
                     aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">知识产权保护</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/">首页
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="/history.html">历史项目</a>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/add.html">添加项目</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" style="padding-bottom: 5px; padding-top: 5px" data-toggle="dropdown" role="button" aria-haspopup="true"
-                            aria-expanded="false">
-                            <img src="/images/userimage.png" style="width: 36px" alt="张三" class="img-circle">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="/">我的项目</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">知识产权保护</a>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <div class="container">
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="/">首页
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
 
-        <div class="row">
-
-            <form>
+                <li>
+                    <a href="/history.html">历史项目</a>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <label for="projectname">项目名称</label>
-                    <input type="text" class="form-control" id="projectname" placeholder="project name" />
+                    <input type="text" class="form-control" placeholder="Search">
                 </div>
-
-                <div class="form-group">
-                    <label for="projectdesc">简介</label>
-
-                    <textarea id="projectdesc" class="form-control" rows="3"></textarea>
-
-                </div>
-
-                <button type="submit" class="btn btn-primary">提交</button>
-                <button type="reset" class="btn btn-default">重置</button>
-
+                <button type="submit" class="btn btn-default">Submit</button>
             </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/add.html">添加项目</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" style="padding-bottom: 5px; padding-top: 5px"
+                       data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">
+                        <img src="/images/userimage.png" style="width: 36px" alt="张三" class="img-circle">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/">我的项目</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
+</nav>
+<div class="container">
 
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+
+    <div class="row">
+
+        <form>
+            <div class="form-group">
+                <label for="projectname">项目名称</label>
+                <input type="text" class="form-control" id="projectname" placeholder="project name"/>
+            </div>
+
+            <div class="form-group">
+                <label for="projectdesc">简介</label>
+
+                <textarea id="projectdesc" class="form-control" rows="3"></textarea>
+
+            </div>
+
+            <button type="submit" class="btn btn-primary">提交</button>
+            <button type="reset" class="btn btn-default">重置</button>
+
+        </form>
+    </div>
+</div>
+
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
