--- a/src/edit.html
+++ b/src/edit.html
@@ -81,16 +81,16 @@
 
     <div class="row">
 
-        <form>
+        <form id="project">
             <div class="form-group">
-                <label for="projectname">项目名称</label>
-                <input type="text" class="form-control" id="projectname" placeholder="project name"/>
+                <label for="name">项目名称</label>
+                <input type="text" class="form-control" id="name" placeholder="project name"/>
             </div>
 
             <div class="form-group">
-                <label for="projectdesc">简介</label>
+                <label for="desc">简介</label>
 
-                <textarea id="projectdesc" class="form-control" rows="3"></textarea>
+                <textarea id="desc" class="form-control" rows="3"></textarea>
 
             </div>
 
@@ -103,6 +103,8 @@
 
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/truffle-contract.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
