--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                                 <a href="/edit.html">编辑项目</a>
                             </li>
                             <li>
-                                <a href="/detail.html">项目详情</a>
+                                <a href="/detail.html?id={}">项目详情</a>
                             </li>
                         </ul>
                     </div>
@@ -80,6 +80,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/web3.min.js"></script>
 <script src="js/truffle-contract.js"></script>
+<script src="js/bignumber.js"></script>
 <script src="js/app.js"></script>
 </body>
 
