--- a/src/edit.html
+++ b/src/edit.html
@@ -104,6 +104,7 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/truffle-contract.js"></script>
+<script src="js/bignumber.js"></script>
 <script src="js/app.js"></script>
 </body>
 
